--- a/pages/register/index.html
+++ b/pages/register/index.html
@@ -4,6 +4,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="../../styles/fonts.css">
+    <link rel="stylesheet" href="../../styles/inputs.css">
     <link rel="stylesheet" href="../../styles/buttons.css">
     <link rel="stylesheet" href="../../styles/flex.css">
     <link rel="stylesheet" href="../../styles/globalStyles.css">
@@ -11,39 +13,41 @@
     <title>Petinfo - Cadastar</title>
 </head>
 <body>
-    <main class="flex flex-column gap16">
+    <main class="flex flex-column">
         <header class="flex justify-space-between align-center">
-            <h2>Cadastro</h2>
-            <a href="../../index.html">
-                <button id="button-return" class="button-default">Voltar para o login</button>
+            <h2 class="font3">Cadastro</h2>
+            <a href="../../index.html" id="button-return">
+                <button class="button-default">Voltar para o login</button>
             </a>
         </header>
         <form action="" class="flex flex-column">
             <div class="flex flex-column gap10">
-                <label for="user">Usuário</label>
+                <label class="font4" for="user">Usuário</label>
                 <input type="text" name="user" id="user" placeholder="Digite seu usuário aqui" required>
             </div>
             <div class="flex flex-column gap10">
-                <label for="email">Email</label>
+                <label class="font4" for="email">Email</label>
                 <input type="email" name="email" id="email" placeholder="Digite seu email aqui" required>
             </div>
             <div class="flex flex-column gap10">
-                <label for="photo">Link da foto do perfil</label>
+                <label class="font4" for="photo">Link da foto do perfil</label>
                 <input type="photo" name="photo" id="photo" placeholder="Insira o link aqui" required>
             </div>
             <div class="flex flex-column gap10">
-                <label for="password">Senha</label>
+                <label class="font4" for="password">Senha</label>
                 <input type="password" name="password" id="password" placeholder="Digite sua senha aqui" required>
             </div>
             <button class="button-brand">Cadastrar</button>
-        </form>       
-        <button class="button-default">Voltar para o login</button>
+        </form>      
+        <form action="../../index.html">
+            <button class="button-default">Voltar para o login</button>
+        </form> 
         
     </main>
     <aside class="flex flex-column align-center">
         <section>
             <h1>Petinfo</h1>
-            <h2 class="brand1">Ooooooooba!</h2>
+            <h2 class="brand1">Ooooooba!</h2>
             <p>Agora vamos poder contribuir para o bem estar do seu pet por meio do conhecimento</p>
         </section>
         <div>
@@ -51,6 +55,6 @@
         </div>
 
     </aside>
-    
+    <script src="index.js"></script>
 </body>
 </html>
