--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 <body>
     <main class="flex flex-column">
         <h2>Login</h2>
-        <form action="pages/register/index.html" class="flex flex-column gap32">
+        <form action="pages/home/index.html" class="flex flex-column gap32">
             <div class="flex flex-column gap16">
                 <label class="font4" for="user">Usuário</label>
                 <input type="text" placeholder="Digite seu usuário aqui">
