--- a/pages/register/index.html
+++ b/pages/register/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="../../styles/toast.css">
     <link rel="stylesheet" href="../../styles/fonts.css">
     <link rel="stylesheet" href="../../styles/inputs.css">
     <link rel="stylesheet" href="../../styles/buttons.css">
@@ -20,24 +21,24 @@
                 <button class="button-default">Voltar para o login</button>
             </a>
         </header>
-        <form action="" class="flex flex-column">
+        <form id="login" class="flex flex-column">
             <div class="flex flex-column gap10">
                 <label class="font4" for="user">Usuário</label>
-                <input type="text" name="user" id="user" placeholder="Digite seu usuário aqui" required>
+                <input type="text" name="user" id="username" placeholder="Digite seu usuário aqui" required>
             </div>
             <div class="flex flex-column gap10">
                 <label class="font4" for="email">Email</label>
                 <input type="email" name="email" id="email" placeholder="Digite seu email aqui" required>
             </div>
             <div class="flex flex-column gap10">
-                <label class="font4" for="photo">Link da foto do perfil</label>
-                <input type="photo" name="photo" id="photo" placeholder="Insira o link aqui" required>
+                <label class="font4" for="avatar">Link da foto do perfil</label>
+                <input type="photo" name="avatar" id="avatar" placeholder="Insira o link aqui" required>
             </div>
             <div class="flex flex-column gap10">
                 <label class="font4" for="password">Senha</label>
                 <input type="password" name="password" id="password" placeholder="Digite sua senha aqui" required>
             </div>
-            <button class="button-brand">Cadastrar</button>
+            <button type="submit" class="button-brand">Cadastrar</button>
         </form>      
         <form action="../../index.html">
             <button class="button-default">Voltar para o login</button>
@@ -55,6 +56,6 @@
         </div>
 
     </aside>
-    <script src="index.js"></script>
+    <script type="module" src="index.js"></script>
 </body>
 </html>
