--- a/pages/home/index.html
+++ b/pages/home/index.html
@@ -22,7 +22,7 @@
                     <img src="../../src/img/Ellipse 1.png" alt="">
                     <div class="logout flex flex-column gap20">
                         <h4>@samuelleaoui</h4>
-                        <button class="flex gap16">
+                        <button class="button-leave flex gap16">
                             <div>
                                 <img src="../../src/img/sign-out-alt.png" alt="">
                             </div>
@@ -87,6 +87,6 @@
         </ul>
     </main>
     
-    <script type="module" src="index.js"></script>
+    <script type="module" src="./index.js"></script>
 </body>
 </html>
