--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="./styles/toast.css">
     <link rel="stylesheet" href="./styles/buttons.css">
     <link rel="stylesheet" href="./styles/inputs.css">
     <link rel="stylesheet" href="./styles/fonts.css">
@@ -19,12 +20,17 @@
         <form id="login" class="flex flex-column gap32">
             <div class="flex flex-column gap16">
                 <label class="font4" for="user">Usuário</label>
-                <input type="email" id="email" placeholder="Digite seu usuário aqui">
+                <input type="email" id="email" placeholder="Digite seu email aqui">
             </div>
             <div class="flex flex-column gap16">
                 <label class="font4" for="password">Senha</label>
                 <input type="password" id="password" placeholder="Digite sua senha aqui">
             </div>
+            <div class="flex align-center gap20">
+                <p>Permanecer conectado?</p>
+                <input type="checkbox" name="checkbox" id="checkbox">
+            </div>
+            <p class="login-error error-animation-out">A senha está incorreta</p>
             <button type="submit" class="button-brand">Acessar</button>
         </form>
         <footer class="flex flex-column gap16">
