--- a/pages/home/home.html
+++ b/pages/home/home.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="../../styles/modal.css">
     <link rel="stylesheet" href="../../styles/inputs.css">
     <link rel="stylesheet" href="../../styles/fonts.css">
     <link rel="stylesheet" href="../../styles/flex.css">
@@ -41,8 +42,7 @@
             
         </ul>
     </main>
-   
-    
+    <dialog></dialog>    
     <script type="module" src="./home.js"></script>
 </body>
 </html>
