--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
                 <input type="checkbox" name="checkbox" id="checkbox">
             </div>
             <p class="login-error error-animation-out">A senha está incorreta</p>
-            <button id="button-login" class="button-brand">Acessar</button>
+            <button id="button-login" class="button-disabled">Acessar</button>
         </form>
         <footer class="flex flex-column gap16">
             <h3 class="font-semi5">Ainda não possui conta?</h3>
