--- a/pages/register/index.html
+++ b/pages/register/index.html
@@ -38,7 +38,7 @@
                 <label class="font4" for="password">Senha</label>
                 <input type="password" name="password" id="password" placeholder="Digite sua senha aqui" required>
             </div>
-            <button type="submit" class="button-brand">Cadastrar</button>
+            <button type="submit" id="button-login" class="button-disabled">Cadastrar</button>
         </form>      
         <form action="../../index.html">
             <button class="button-default">Voltar para o login</button>
