fix: feed background

--- a/pages/home/home.html
+++ b/pages/home/home.html
@@ -15,6 +15,7 @@
     <title>Petinfo</title>
 </head>
 <body class="flex flex-column">
+    <div class="bg-feed"></div>
     <header class="flex flex-column">
         <section class="flex align-center justify-space-between">
             <h1>Petinfo</h1>
